--- a/295B-WebModule_v_2/DataAnalyzer/src/main/webapp/resources/css/custom.css
+++ b/295B-WebModule_v_2/DataAnalyzer/src/main/webapp/resources/css/custom.css
@@ -37,3 +37,32 @@ body{
 	border-radius: 15px; 
 	background-color:#e6e6e6;
 }
+
+.box{
+    margin: 5px;
+    width: auto;
+    padding:2px;
+    border:2px solid #ccc;
+    border-radius: 10px;
+    display:inline-block;
+}
+
+a.boxclose{
+    float:right;
+    margin-top:-10px;
+    margin-right:-8px;
+    cursor:pointer;
+    color: #fff;
+    border: 1px solid #AEAEAE;
+    border-radius: 20px;
+    background: #605F61;
+    font-size: 15px;
+    font-weight: bold;
+    display: inline-block;
+    line-height: 0px;
+    padding: 8px 3px;       
+}
+
+.boxclose:before {
+    content: "×";
+}
